--- a/A01_widget/app/src/main/res/layout/activity_main.xml
+++ b/A01_widget/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -9,8 +11,70 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.devsul.a01_widget.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+        android:padding="10dp"
+        android:background="#555">
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
+
+                <TextView
+                    android:orientation="vertical"
+                    android:background="#0f0"
+                    android:textSize="30dp"
+                    android:id="@+id/test01"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="아이디 : " />
+
+                <TextView
+                    android:background="#fff"
+
+                    android:textSize="30dp"
+                    android:id="@+id/test02"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="apple" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:orientation="vertical"
+
+                    android:background="#0f0"
+                    android:textSize="30dp"
+                    android:id="@+id/test03"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="암호 : " />
+
+                <TextView
+
+                    android:background="#fff"
+                    android:textSize="30dp"
+                    android:id="@+id/test04"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="apple" />
+            </LinearLayout>
+            <Button
+                android:layout_gravity="center"
+                android:background="#fff"
+                android:textSize="30dp"
+                android:id="@+id/test05"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="로그인" />
+    </LinearLayout>
+
+
+</LinearLayout>
