--- a/A01_widget/app/src/main/res/layout/activity_main.xml
+++ b/A01_widget/app/src/main/res/layout/activity_main.xml
@@ -25,20 +25,20 @@
                 >
 
                 <TextView
-                    android:orientation="vertical"
+                    android:gravity="right"
                     android:background="#0f0"
                     android:textSize="30dp"
                     android:id="@+id/test01"
-                    android:layout_width="wrap_content"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:text="아이디 : " />
 
                 <TextView
+                    android:gravity="right"
                     android:background="#fff"
-
                     android:textSize="30dp"
                     android:id="@+id/test02"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="apple" />
             </LinearLayout>
@@ -48,28 +48,29 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:orientation="vertical"
-
+                    android:gravity="right"
                     android:background="#0f0"
                     android:textSize="30dp"
                     android:id="@+id/test03"
-                    android:layout_width="wrap_content"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:text="암호 : " />
 
                 <TextView
-
+                    android:gravity="right"
                     android:background="#fff"
                     android:textSize="30dp"
                     android:id="@+id/test04"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="apple" />
             </LinearLayout>
+
             <Button
                 android:layout_gravity="center"
                 android:background="#fff"
                 android:textSize="30dp"
+                android:layout_marginTop="20dp"
                 android:id="@+id/test05"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
