작업 내용 추가

--- a/A03Menu/app/src/main/res/menu/menu_main.xml
+++ b/A03Menu/app/src/main/res/menu/menu_main.xml
@@ -3,4 +3,13 @@
     <item
         android:title="메뉴 1"
         android:id="@+id/menu01" />
+    <item
+        android:title="메뉴 2"
+        android:id="@+id/menu02" />
+    <item
+        android:title="메뉴 3"
+        android:id="@+id/menu03" />
+    <item
+        android:title="메뉴 4"
+        android:id="@+id/menu04" />
 </menu>
