--- a/A03Menu/app/src/main/res/layout/activity_main.xml
+++ b/A03Menu/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,8 @@
     tools:context="com.devsul.a03menu.MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/testView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:text="Hello World!" />
 </RelativeLayout>
