--- a/A03Menu/app/src/main/res/layout/activity_main.xml
+++ b/A03Menu/app/src/main/res/layout/activity_main.xml
@@ -13,5 +13,6 @@
         android:id="@+id/testView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello World!" />
+        android:textSize="20dp"
+        android:text="@string/my_test_string" />
 </RelativeLayout>
