--- a/A04_widget/app/src/main/res/layout/activity_main.xml
+++ b/A04_widget/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,9 @@
     </RadioGroup>
 
     <EditText
+        android:id="@+id/editText01"
         android:layout_below="@id/radioGroup01"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content" />
+
 </RelativeLayout>
