--- a/A04_widget/app/src/main/res/layout/activity_main.xml
+++ b/A04_widget/app/src/main/res/layout/activity_main.xml
@@ -54,4 +54,13 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content" />
 
+    <Button
+        android:id="@+id/btn01"
+        android:layout_toRightOf="@id/editText01"
+        android:layout_alignBottom="@id/editText01"
+        android:layout_marginBottom="4dp"
+        android:text="로그인"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </RelativeLayout>
