--- a/A04_widget/app/src/main/res/layout/activity_main.xml
+++ b/A04_widget/app/src/main/res/layout/activity_main.xml
@@ -50,6 +50,7 @@
 
     <EditText
         android:id="@+id/editText01"
+        android:hint="아이디를 넣어주세요"
         android:layout_below="@id/radioGroup01"
         android:layout_width="200dp"
         android:layout_height="wrap_content" />
