미디어 플레이

--- a/A08_Media01/app/src/main/res/layout/activity_main.xml
+++ b/A08_Media01/app/src/main/res/layout/activity_main.xml
@@ -11,11 +11,13 @@
 
     <Button
         android:id="@+id/btnPlay"
+        android:textAllCaps="false"
         android:text="Play"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <Button
+        android:textAllCaps="false"
         android:id="@+id/btnStop"
         android:layout_toRightOf="@id/btnPlay"
         android:text="Stop"
