--- a/P01_ListView/app/src/main/res/layout/activity_main2.xml
+++ b/P01_ListView/app/src/main/res/layout/activity_main2.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/Rid"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -13,24 +14,29 @@
         android:id="@+id/txtTitle"
         android:layout_width="match_parent"
         android:layout_height="70dp" />
-
-    <Button
+    <LinearLayout
         android:layout_below="@id/txtTitle"
-        android:textAllCaps="false"
-        android:id="@+id/btnPlay"
-        android:textSize="30dp"
-        android:text="Play"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <Button
+            android:layout_below="@id/txtTitle"
+            android:textAllCaps="false"
+            android:id="@+id/btnPlay"
+            android:textSize="30dp"
+            android:text="Play"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-    <Button
-        android:layout_below="@id/txtTitle"
-        android:layout_toRightOf="@id/btnPlay"
-        android:layout_marginLeft="20dp"
-        android:textAllCaps="false"
-        android:id="@+id/btnStop"
-        android:textSize="30dp"
-        android:text="Stop"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <Button
+            android:layout_below="@id/txtTitle"
+            android:layout_toRightOf="@id/btnPlay"
+            android:layout_marginLeft="20dp"
+            android:textAllCaps="false"
+            android:id="@+id/btnStop"
+            android:textSize="30dp"
+            android:text="Stop"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 </RelativeLayout>
