--- a/A09_Thread/app/src/main/res/layout/activity_main.xml
+++ b/A09_Thread/app/src/main/res/layout/activity_main.xml
@@ -15,4 +15,11 @@
         android:text="Hello World!"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <ProgressBar
+        android:id="@+id/pgBar"
+        android:layout_below="@id/textView"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </RelativeLayout>
