--- a/A09_Thread/app/src/main/res/layout/activity_main.xml
+++ b/A09_Thread/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
     <ProgressBar
         android:id="@+id/pgBar"
         android:layout_below="@id/textView"
-        style="?android:attr/progressBarStyleHorizontal"
+        style="@android:style/Widget.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </RelativeLayout>
