브로드캐스트 심화

--- a/A42_BrCast2/app/src/main/res/layout/activity_main.xml
+++ b/A42_BrCast2/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.devsul.a42_brcast2.MainActivity">
 
-    <TextView
+    <Button
+        android:onClick="onMybtnClick"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!" />
