--- a/A44_Service/app/src/main/res/layout/activity_main.xml
+++ b/A44_Service/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,9 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.devsul.a44_service.MainActivity">
 
-    <TextView
+    <Button
+        android:onClick="btnClick"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="버튼" />
 </RelativeLayout>
