--- a/A45_Style/app/src/main/res/layout/activity_main.xml
+++ b/A45_Style/app/src/main/res/layout/activity_main.xml
@@ -30,26 +30,28 @@
         android:layout_height="0dp"
         android:text="0" />
 
-    <TableRow
-        android:layout_width="match_parent"
+    <include
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_width="match_parent"
+        android:layout_weight="1"
+        layout="@layout/button_row" />
 
-        <Button
-            android:id="@+id/btn1"
-            android:text="1"
-            style="@style/RemoteBtn" />
+    <include
+        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_weight="1"
+        layout="@layout/button_row" />
 
-        <Button
-            android:id="@+id/btn2"
-            android:text="2"
-            style="@style/RemoteBtn" />
+    <include
+        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_weight="1"
+        layout="@layout/button_row" />
 
-        <Button
-            android:id="@+id/btn3"
-            android:text="enter"
-            style="@style/RemoteBtn" />
-
-    </TableRow>
+    <include
+        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_weight="1"
+        layout="@layout/button_row" />
 
 </TableLayout>
