--- a/A45_Style/app/src/main/res/values/styles.xml
+++ b/A45_Style/app/src/main/res/values/styles.xml
@@ -9,6 +9,10 @@
     </style>
 
     <style name="RemoteBtn">
+        <item name="android:background">@drawable/btn_selector</item>
+        <item name="android:textColor">#ff0</item>
+        <item name="android:layout_margin">4dp</item>
+        <item name="android:textSize">20dp</item>
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_weight">1</item>
         <item name="android:layout_height">match_parent</item>
