--- a/A45_Style/app/src/main/res/layout/activity_main.xml
+++ b/A45_Style/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
 
     <TextView
         android:id="@+id/outTextView"
+        android:background="@drawable/cling_bg"
         android:gravity="center"
         android:textSize="50dp"
         android:layout_width="match_parent"
