--- a/A52_Fragment/app/src/main/res/layout/activity_main.xml
+++ b/A52_Fragment/app/src/main/res/layout/activity_main.xml
@@ -13,4 +13,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!" />
+
+    <fragment
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:name="com.devsul.a52_fragment.BlankFragment"
+        tools:layout="@layout/fragment_blank" />
 </RelativeLayout>
