--- a/A52_Fragment/app/src/main/res/layout/activity_main.xml
+++ b/A52_Fragment/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.devsul.a52_fragment.MainActivity">
+    >
 
     <TextView
         android:layout_width="wrap_content"
@@ -15,8 +16,16 @@
         android:text="Hello World!" />
 
     <fragment
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/fragment1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:name="com.devsul.a52_fragment.BlankFragment"
         tools:layout="@layout/fragment_blank" />
-</RelativeLayout>
+
+    <fragment
+        android:id="@+id/fragment2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:name="com.devsul.a52_fragment.BlankFragment"
+        tools:layout="@layout/fragment_blank" />
+</LinearLayout>
