--- a/A52_Fragment_2/app/src/main/res/layout/activity_main.xml
+++ b/A52_Fragment_2/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -9,8 +10,31 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.devsul.a52_fragment_2.MainActivity">
 
-    <TextView
+    <Button
+        android:id="@+id/btnAdd"
+        android:onClick="onBtnClick"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+        android:text="ADD" />
+
+    <Button
+        android:id="@+id/btnRemove"
+        android:onClick="onBtnClick"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="REMOVE" />
+
+    <Button
+        android:id="@+id/btnReplace"
+        android:onClick="onBtnClick"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="REPLACE" />
+
+    <Button
+        android:id="@+id/btnHide"
+        android:onClick="onBtnClick"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="HIDE" />
+</LinearLayout>
