--- a/A52_Fragment_2/app/src/main/res/layout/activity_main.xml
+++ b/A52_Fragment_2/app/src/main/res/layout/activity_main.xml
@@ -37,4 +37,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="HIDE" />
+
+    <FrameLayout
+        android:id="@+id/frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+    </FrameLayout>
+
 </LinearLayout>
