--- a/A53_Notification/app/src/main/res/layout/activity_noti.xml
+++ b/A53_Notification/app/src/main/res/layout/activity_noti.xml
@@ -7,11 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.devsul.a53_notification.MainActivity">
+    android:background="#f00"
+    tools:context="com.devsul.a53_notification.NotiActivity">
 
-    <Button
-        android:onClick="onBtnClick"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
 </RelativeLayout>
