--- a/A53_Notification/app/src/main/res/layout/activity_main.xml
+++ b/A53_Notification/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,16 @@
     tools:context="com.devsul.a53_notification.MainActivity">
 
     <Button
+        android:id="@+id/btn"
         android:onClick="onBtnClick"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!" />
+
+    <ImageView
+        android:layout_below="@id/btn"
+        android:scaleType="centerCrop"
+        android:src="@drawable/koala"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </RelativeLayout>
