--- a/A54_Camera/app/src/main/res/layout/activity_main.xml
+++ b/A54_Camera/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,9 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.devsul.a54_camera.MainActivity">
 
-    <TextView
+    <Button
+        android:onClick="onBtnClick"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="사진촬영" />
 </RelativeLayout>
