--- a/A54_Camera/app/src/main/res/layout/activity_main.xml
+++ b/A54_Camera/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,15 @@
     tools:context="com.devsul.a54_camera.MainActivity">
 
     <Button
+        android:id="@+id/btn"
         android:onClick="onBtnClick"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="사진촬영" />
+
+    <ImageView
+        android:id="@+id/btnImgView"
+        android:layout_below="@id/btn"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </RelativeLayout>
